# jaxamp

./: README.md  pyproject.toml
src/eqxamp/: __init__.py  _amp.py  _dynamic_scalar.py  amp.py  genamp.py
src/jaxamp/: __about__.py  __init__.py  _amp.py  _dynamic_scalar.py  _dynamic_scaler.py
tests/: __init__.py  test_amp.py
